# SSL-robot

./: .gitignore  CMakeLists.txt  README.md
proto/: ssl_referee_simple.proto
src/: main.cpp
src/comm/: robot_comm.cpp  robot_comm.h
src/dashboard/: dashboard.cpp  dashboard.h
src/referee/: referee_client.cpp  referee_client.h
src/skills/: goalkeeper.cpp  goalkeeper.h  intercept_ball.cpp  intercept_ball.h  kick_to_goal.cpp  kick_to_goal.h  move_to_position.cpp  move_to_position.h  pass_skill.cpp  pass_skill.h  skill.h
src/strategy/: formation.cpp  formation.h  roles.h  strategy_engine.cpp  strategy_engine.h
src/vision/: vision_client.cpp  vision_client.h
src/world/: world_model.cpp  world_model.h
